api-meta-rev2/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codification-ape-model-deployment-meta-rev2-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codification-ape-model-deployment-meta-rev2-dev
  template:
    metadata:
      labels:
        app: codification-ape-model-deployment-meta-rev2-dev
    spec:
      containers:
        - name: codif-ape-app-dev
          image: thomasfaria/codification-ape-api:deploy-dev-api-rev2
          imagePullPolicy: Always
          resources:
            limits:
              memory: "20Gi"
              cpu: "2000m"
